<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voter_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.votingapp.voter.home.HomeFragment"
        android:label="@string/title_vote"
        tools:layout="@layout/fragment_vote" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.votingapp.voter.dashboard.DashboardFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.votingapp.voter.notifications.NotificationsFragment"
        android:label="@string/title_candidate"
        tools:layout="@layout/fragment_candidate" />
</navigation>